--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,9 @@
   "compileOnSave": true,
   "compilerOptions": {
     /* Basic Options */
-    "target": "ES2016",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
+    "target": "es2015",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
     "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
-    // "lib": ["es6", "dom"],                             /* Specify library files to be included in the compilation. */
+    "lib": ["es5", "dom"],                             /* Specify library files to be included in the compilation. */
     // "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
     "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
@@ -41,8 +41,8 @@
     // "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
     // "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": ["app_ts"],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
-    "typeRoots": ["../../node_modules/@types/"],                       /* List of folders to include type definitions from. */
-    // "types": ["../../node_modules/@types/"],                           /* Type declaration files to be included in compilation. */
+    "typeRoots": ["./node_modules/@types/"],                       /* List of folders to include type definitions from. */
+    // "types": ["./node_modules/@types/"],                           /* Type declaration files to be included in compilation. */
     "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": true,                 /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
