--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "mongodb": "^3.1.8",
         "mongoose": "^5.0.13",
         "morgan": "~1.9.0",
+        "nodemon": "^1.18.7",
         "qrcode": "^1.2.0",
         "redis": "^2.8.0",
         "request": "^2.85.0",
