--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ typings/
 
 # Optional eslint cache
 .eslintcache
+.eslintrc.js
 
 # Optional REPL history
 .node_repl_history
@@ -60,3 +61,6 @@ typings/
 
 # next.js build output
 .next
+
+.DS_Store
+.vscode/
