--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
         "bcrypt-nodejs": "0.0.3",
         "body-parser": "~1.18.2",
         "bson": "^2.0.6",
-        "concurrently": "^4.0.1",
+        "concurrently": "^4.1.0",
         "cookie-parser": "~1.4.3",
         "debug": "^2.6.9",
         "ejs": "^2.6.1",
         "express": "^4.16.4",
-        "helmet": "^3.12.0",
+        "helmet": "^3.15.0",
         "kareem": "^2.0.7",
-        "mongodb": "^3.1.8",
-        "mongoose": "^5.0.13",
+        "mongodb": "^3.1.10",
+        "mongoose": "^5.3.14",
         "morgan": "~1.9.0",
         "nodemon": "^1.18.7",
-        "qrcode": "^1.2.0",
+        "qrcode": "^1.3.2",
         "redis": "^2.8.0",
         "request": "^2.85.0",
         "rotating-file-stream": "^1.3.9",
@@ -27,24 +27,24 @@
         "typescript": "^3.2.1"
     },
     "devDependencies": {
-        "@types/chai": "^4.1.7",
-        "@types/chai-as-promised": "^7.1.0",
-        "@types/chai-http": "^3.0.5",
-        "@types/es6-shim": "0.31.38",
-        "@types/eslint": "^4.16.4",
-        "@types/lodash": "4.14.117",
         "@line/bot-sdk": "^5.2.0",
         "@types/aws4": "^1.5.1",
         "@types/bcrypt-nodejs": "^0.0.30",
         "@types/body-parser": "^1.17.0",
         "@types/bson": "^1.0.11",
+        "@types/chai": "^4.1.7",
+        "@types/chai-as-promised": "^7.1.0",
+        "@types/chai-http": "^3.0.5",
         "@types/cookie-parser": "^1.4.1",
         "@types/debug": "^0.0.31",
-        "@types/ejs": "^2.6.0",
+        "@types/ejs": "^2.6.1",
+        "@types/es6-shim": "^0.31.39",
+        "@types/eslint": "^4.16.5",
         "@types/express": "^4.16.0",
         "@types/helmet": "^0.0.42",
-        "@types/mongodb": "^3.1.14",
-        "@types/mongoose": "^5.3.1",
+        "@types/lodash": "4.14.117",
+        "@types/mongodb": "^3.1.17",
+        "@types/mongoose": "^5.3.2",
         "@types/morgan": "^1.7.35",
         "@types/qrcode": "^1.3.0",
         "@types/redis": "^2.8.8",
@@ -54,7 +54,7 @@
         "chai": "^4.2.0",
         "chai-as-promised": "^7.1.1",
         "chai-http": "^4.2.0",
-        "eslint": "^5.8.0",
+        "eslint": "^5.9.0",
         "eslint-plugin-typescript": "^0.13.0",
         "prettier-tslint": "^0.4.0",
         "typescript-eslint-parser": "^20.1.1"
